template /find/ fixes

--- a/WallOfDenial/templates/group_management.html
+++ b/WallOfDenial/templates/group_management.html
@@ -235,7 +235,7 @@
         function(isConfirm){
           if (isConfirm) {
             $.ajax({
-              url: '/find/delete_layer/',
+              url: '/delete_layer/',
               type: 'POST',
               data: {
                 'layer': layer,
