signup template link fix

--- a/WallOfDenial/templates/signup.html
+++ b/WallOfDenial/templates/signup.html
@@ -59,11 +59,11 @@
                                     <label for="password">Password:</label> *
                                     <input type="text" name="password" class="form-control" id="password">
                                 </div>
-                                <input type="hidden" class="form-control input-lg"  name="next" value="/client/home/">
+                                <input type="hidden" class="form-control input-lg"  name="next" value="/home/">
                                 <input type="submit" class="btn btn-default input-lg" value="Submit" />
                             </form>
                             <br />
-                            <p class="lead"><a href="/client/login">Log-in</a></p>
+                            <p class="lead"><a href="/login">Log-in</a></p>
                         </div>
                     </div>
                 </main>
