--- a/WallOfDenial/templates/base.html
+++ b/WallOfDenial/templates/base.html
@@ -63,15 +63,12 @@
                         <li>
                             <a href="../management"><i class="fa fa-users"></i> Management</a>
                         </li>
-<!--                         <li>
-                            <a href="../dashboard"><i class="fa fa-tachometer"></i> Dashboard</a>
-                        </li>
-                        <li>
-                            <a href="../classification"><i class="fa fa-circle-o-notch"></i> Classification</a>
+                         <li>
+                            <a id="ml"><i class="fa fa-tachometer"></i> Dashboard</a>
                         </li>
                         <li>
                             <a href="../map"><i class="fa fa-compass"></i> Tracking</a>
-                        </li> -->
+                        </li> 
                         <li>
                             <a href="../help"><i class="fa fa-question-circle"></i> Help</a>
                         </li>
