--- a/WallOfDenial/templates/base.html
+++ b/WallOfDenial/templates/base.html
@@ -67,7 +67,7 @@
                             <a id="ml"><i class="fa fa-tachometer"></i> Dashboard</a>
                         </li>
                         <li>
-                            <a href="../map"><i class="fa fa-compass"></i> Tracking</a>
+                            <a href="../tracking"><i class="fa fa-compass"></i> Tracking</a>
                         </li> 
                         <li>
                             <a href="../help"><i class="fa fa-question-circle"></i> Help</a>
