--- a/WallOfDenial/templates/map.html
+++ b/WallOfDenial/templates/map.html
@@ -2,12 +2,8 @@
 {% block head_scripts %}
 
         <!--  Leaflet.draw-master  -->
-        <script src="/static/Leaflet.draw-master/libs/leaflet-src.js"></script>
-        <link rel="stylesheet" href="/static/Leaflet.draw-master/libs/leaflet.css" />
-
-
-        <!-- Leaflet.buildigns -->
-        <script src="/static/osmbuildings/dist/OSMBuildings-Leaflet.js"></script>
+        <script src="/static/leaflet.js"></script>
+        <link rel="stylesheet" href="/static/leaflet.css" />
 
         <!-- D3 and JQuery -->
         <script src="/static/js/jquery-1.11.0.js"></script>  <!-- | JQUERY -->
@@ -26,125 +22,97 @@
         <!-- Font Awesome CSS -->
         <link rel="stylesheet" href="/static/font-awesome-4.3.0/css/font-awesome.min.css">
 
-        <!-- Utils -->
-        <script src='/static/find-utils.js'></script>
 
-        <!-- Tracking -->
-       <script src='/static/tracking.js'></script>
+        <link rel="stylesheet" href="/static/mapClient.css" />       
 
-       <!-- Leaflet Libraries to Map -->
-       <script src='/static/add_leaflet_libraries.js'></script>
 
 {% endblock %}
 {% block content %}
 
         {% csrf_token %}
 
-<div class="container-fluid">
-    <div class="row">
-        <div id='map'> </div>
-    </div>
-</div>
+        <div class="container-fluid">
+            <div class="row">
+                <div id='map'> </div>
+            </div>
+        </div>
 
         <script>
 
-            map = initMap("map",{{mapdata|safe}});
-            add_leaflet_libraries(map);
+            var map;
 
-            // Draw Features
-            var drawnItems = L.featureGroup().addTo(map);
-            map.addControl(new L.Control.Draw({
-                draw: { circle: false },
-                edit: { featureGroup: drawnItems }
-            }));
+            var servers = {{ servers|safe }};
 
-            var feature_types = {
-                "marker": "Point",
-                "polygon": "Polygon",
-                "rectangle": "Polygon",
-                // "circle": "Point",
-                "polyline": "LineString"
-            };
+            var group = "{{ group|safe}}";
+            var username = "{{ username|safe }}";
 
-            function sendFeature(id) {
-                var feature = drawnItems._layers[id];
-                if (feature.layerType == "marker") {
-                    var data = {
-                        'geom': JSON.stringify([[feature._latlng.lng, feature._latlng.lat]]),
-                        'apikey': '7q1qcqmsxnvw',
-                        'geotype': "Point",
-                        'radius': null,
-                        'name': $('#featureInfo').val(),
-                        'uuid': $('#layers').val(),
-                        'properties':  JSON.stringify({}),
-                        'csrfmiddlewaretoken': $('[name=csrfmiddlewaretoken]')[0].value
-                    };
-                    var results = Utils.getRequest(
-                        '/add_feature/',
-                        data
-                    );
-                    map.getLayer();
-                    return results;
-                }
-                else {
-                    var data = {
-                        'geom': [],
-                        'apikey':  map.config.servers.geospatial.apikey,
-                        'geotype': feature_types[feature.layerType],
-                        'radius': null,
-                        'uuid':$('#layers').val(),
-                        'properties': JSON.stringify({'name': $('#featureInfo').val()})
-                    };
-                    for (var i = 0; i < feature._latlngs.length; i++) {
-                        data.geom.push([feature._latlngs[i].lng,feature._latlngs[i].lat])
-                    }
-                    data.geom = JSON.stringify(data.geom);
-                    var results;
-                    $.ajax({
-                        crossDomain: true,
-                        // dataType: 'jsonp',
-                        type: "POST",
-                        method: "POST",
-                        async: false,
-                        data: data,
-                        url: map.config.servers.geospatial.address + '/api/v1/layer/feature',
-                        // url: '/api/v1/add_feature_path',     // IF A PATH
-                        success: function (data) {
-                            try {
-                                results = data;
-                                if (results.success) {  console.log(results);  }
-                                else {  alert(results.message);  }
-                            }
-                            catch(err){  console.log('Error:', err);  }
-                        },
-                        error: function(xhr,errmsg,err) {
-                            console.log(xhr.status,xhr.responseText,errmsg,err);
-                        }
-                    });
-                    map.getLayer();
-                    return results;
-                }
-            }
+            $(function(){
+                
+                map = L.map('map', {maxZoom: 22});
 
-            var popup = L.popup();
-            function onMapClick(e) {
-                if (e.target.editing._enabled) {  console.log('editing enabled')  }
-                else {
-                    popup
-                        .setLatLng(e.latlng)
-                        .setContent("<input type='text' id='featureInfo'> <br> <input type='button' value='Submit Feature' onClick='sendFeature(" + e.target._leaflet_id + ")'/>")
-                        .openOn(map);
-                }
-            }
+                L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png',{ 
+                    attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a> | F.I.N.D.'
+                }).addTo(map);
 
-            map.on('draw:created', function(event) {
-                var layer = event.layer;
-                layer.on('click', onMapClick);
-                layer.options.color='blue';
-                layer.layerType = event.layerType;
-                drawnItems.addLayer(layer);
+                map.setView( [0,0], 1 );
+
             });
+
+
+
+var current_location_marker = false;
+var timer;
+var trackingLocations = {};
+
+function startTracking() {
+    timer = window.setInterval(function() {
+        // $.getJSON(
+        //     servers.ml + '/whereami', {
+        //     group: servers.gis.apikey,
+        //     user: username
+        // }, 
+        $.getJSON(
+            servers.ml + '/userlocs', {
+            group: servers.gis.apikey
+        }, 
+        function(data) {
+            console.log(data);
+            // for (var user in data) { console.log(user); }
+        });
+    }, 1000);
+}
+
+function stopTracking(){
+    window.clearInterval(timer);
+}
+
+$(function(){
+    $("#track").on('change', function() {
+        if ($("#track")[0].checked) {
+            startTracking();
+        }
+        else {
+            stopTracking();
+        }
+    });
+})
+
+
+
+
+
+
+
+
+            $("#ml").click(function(){
+              var layer = $(this).closest("li").attr("id");
+              var url = servers.ml + "/dashboard/" + servers.gis.apikey;
+              console.log("view:", url);
+              window.open(url, '_blank');
+            }).css('cursor', 'pointer');
+
 
         </script>
 
 {% endblock %}
+
