--- a/WallOfDenial/templates/map.html
+++ b/WallOfDenial/templates/map.html
@@ -128,6 +128,7 @@ function startTracking() {
                         }
                         // users
                         if(!trackingUsers.hasOwnProperty(user)) {
+                            console.log(trackingLocations[userLoc].coordinates);
                             trackingUsers[user] = L.marker(
                                 trackingLocations[userLoc].coordinates
                             ).addTo(map).bindPopup(
