--- a/WallOfDenial/templates/map.html
+++ b/WallOfDenial/templates/map.html
@@ -129,20 +129,18 @@ function startTracking() {
                         }
                         // users
                         if(!trackingUsers.hasOwnProperty(user)) {
-                            console.log(trackingLocations[userLoc].geometry.coordinates);
                             trackingUsers[user] = L.marker(
                                 trackingLocations[userLoc].geometry.coordinates[1], trackingLocations[userLoc].geometry.coordinates[0]
                             ).addTo(map).bindPopup(
                                 trackingLocations[userLoc].properties.name
                             );
-                        } else {
-                            var lat = trackingLocations[userLoc].geometry.coordinates[0];
-                            var lng = trackingLocations[userLoc].geometry.coordinates[1];
-                            console.log(lat,lng);
-                            var newLatLng = new L.LatLng(lat, lng);
-                            trackingUsers[user].setLatLng(newLatLng); 
-                            trackingUsers[user]._popup.setContent(trackingLocations[userLoc].properties.name);
                         }
+                        var lat = trackingLocations[userLoc].geometry.coordinates[0];
+                        var lng = trackingLocations[userLoc].geometry.coordinates[1];
+                        console.log(lat,lng);
+                        var newLatLng = new L.LatLng(lat, lng);
+                        trackingUsers[user].setLatLng(newLatLng); 
+                        trackingUsers[user]._popup.setContent(trackingLocations[userLoc].properties.name);
                     }
                 }
                 catch(err){  console.log('Error:', err);  }
@@ -181,7 +179,7 @@ $(function(){
 
 
 
-
+startTracking();
 
 
 
