--- a/WallOfDenial/templates/map.html
+++ b/WallOfDenial/templates/map.html
@@ -135,10 +135,10 @@ function startTracking() {
                                 trackingLocations[userLoc].properties.name
                             );
                         }
-                        var lat = trackingLocations[userLoc].geometry.coordinates[0];
-                        var lng = trackingLocations[userLoc].geometry.coordinates[1];
-                        console.log(lat,lng);
-                        var newLatLng = new L.LatLng(lat, lng);
+                        var newLatLng = new L.LatLng(
+                                trackingLocations[userLoc].geometry.coordinates[0];
+                                trackingLocations[userLoc].geometry.coordinates[1];
+                            );
                         trackingUsers[user].setLatLng(newLatLng); 
                         trackingUsers[user]._popup.setContent(trackingLocations[userLoc].properties.name);
                     }
