--- a/WallOfDenial/templates/map.html
+++ b/WallOfDenial/templates/map.html
@@ -68,7 +68,7 @@
                 trackingControl = L.control({position: 'bottomright'});
                 trackingControl.onAdd = function () {
                     var div = L.DomUtil.create('div');
-                    div.innerHTML = '<div><input type="checkbox" id="tracking"> Track<br></div>';
+                    div.innerHTML = '<div><input type="checkbox" id="track"> Track<br></div>';
                     return div;
                 };
                 trackingControl.addTo(map);
