--- a/WallOfDenial/templates/map.html
+++ b/WallOfDenial/templates/map.html
@@ -67,7 +67,7 @@
 
                 trackingControl = L.control({position: 'bottomright'});
                 trackingControl.onAdd = function () {
-                    var div = L.DomUtil.create('div', 'legend');
+                    var div = L.DomUtil.create('div', 'info legend');
                     div.innerHTML = '<div><input type="checkbox" id="track"> Track<br></div>';
                     return div;
                 };
