--- a/WallOfDenial/templates/map.html
+++ b/WallOfDenial/templates/map.html
@@ -68,7 +68,8 @@
                 trackingControl = L.control({position: 'bottomright'});
                 trackingControl.onAdd = function () {
                     var div = L.DomUtil.create('div', 'info legend');
-                    div.innerHTML = '<div><input type="checkbox" id="track"> Track<br></div>';
+                    div.innerHTML = '<div><input type="checkbox" id="track"> Track<br>';
+                    div.innerHTML += '<br><input type="checkbox" id="newLocation"> New Locations</div>';
                     return div;
                 };
                 trackingControl.addTo(map);
