new location marker

--- a/WallOfDenial/templates/map.html
+++ b/WallOfDenial/templates/map.html
@@ -42,6 +42,7 @@
             var map;
 
             var baselayers = {{ baselayers|safe }};
+            var vectorlayers = {{ layers|safe }};
             var servers = {{ servers|safe }};
             var group = "{{ group|safe}}";
             var username = "{{ username|safe }}";
